--- a/packages/vanilla/src/sass/layout/_container.scss
+++ b/packages/vanilla/src/sass/layout/_container.scss
@@ -1,10 +1,10 @@
 @use './../tokens/breakpoints' as *;
 
 .cbp-fluid-container {
-  padding-left: var(--cbp-space-4x);
-  padding-right: var(--cbp-space-4x);
+  padding-left: var(--cbp-space-5x);
+  padding-right: var(--cbp-space-5x);
 
-  @media (min-width: $cbp-breakpoint-md) and (max-width: $cbp-breakpoint-xl) {
+  @media (min-width: $cbp-breakpoint-md) {
     padding-left: var(--cbp-space-8x);
     padding-right: var(--cbp-space-8x);
   }
